--- a/wyy/首页.html
+++ b/wyy/首页.html
@@ -15,7 +15,7 @@
           <div id="wz">
             <span id="head_wz" onclick="myOn()">我的</span>
             <span id="head_wz" onclick="mySee()">发现</span>
-            <span id="head_wz" onclick="myYun()">云村</span>
+            <span id="head_wz" onclick="myYun()">云村啊啊啊啊</span>
             <span id="head_wz" onclick="myVideo()">视频</span>
           </div>
           <span><img id="head_rim" src="img/搜索_白.png" /></span>
