--- a/wyy/首页.html
+++ b/wyy/首页.html
@@ -6,7 +6,6 @@
     <title>首页</title>
     <link type="text/css" rel="styleSheet" href="首页.css" />
     <link type="text/css" rel="styleSheet" href="发现.css" />
-    <link type="text/css" rel="styleSheet" href="云村.css" />
     <link type="text/css" rel="styleSheet" href="视频.css" />
   </head>
   <body>
@@ -14,6 +13,7 @@
       <div id="header">
         <div id="header_1">
           <span><img id="head_lim" src="img/三杠_白.png" /></span>
+          <span class="black">hhhhhh</span>
           <div id="wz">
             <span id="head_wz" onclick="myOn()">我的</span>
             <span id="head_wz" onclick="mySee()">发现</span>
