--- a/wyy/首页.html
+++ b/wyy/首页.html
@@ -6,7 +6,7 @@
     <title>首页</title>
     <link type="text/css" rel="styleSheet" href="首页.css" />
     <link type="text/css" rel="styleSheet" href="发现.css" />
-    <link type="text/css" rel="styleSheet" href="视频.css" />
+    <link type="text/css" rel="styleSheet" href="movemove.css" />
   </head>
   <body>
     <div id="head">
